# wayshot

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  SUMMARY.md  SUMMARY.zh-CN.md  flake.nix
icon-helper/: Cargo.toml
icon-helper/src/: main.rs
lib/audio-utils/: Cargo.toml  fork.md
lib/audio-utils/data/: test.mkv
lib/audio-utils/examples/: load_audio_info.rs
lib/audio-utils/src/: audio.rs  extract.rs  lib.rs  loader.rs  vad.rs
lib/background-remover/: .gitignore  Cargo.toml
lib/background-remover/examples/: remover_demo.rs  remover_multi_demo.rs
lib/background-remover/src/: lib.rs  model.rs  remover.rs
lib/bot/: Cargo.toml
lib/bot/examples/: bot-demo.rs  bot_demo.rs
lib/bot/src/: chat.rs  lib.rs  request.rs  response.rs
lib/bytesio/: Cargo.toml
lib/bytesio/src/: bits_reader.rs  bits_writer.rs  bytes_reader.rs  bytesio.rs
lib/camera/: Cargo.toml
lib/camera/examples/: background_removal_demo.rs  camera_info_demo.rs  capture_camera_demo.rs  circle_demo.rs  image_composition_demo.rs  rectangle-demo.rs  rectangle_demo.rs
lib/camera/src/: camera_client.rs  camera_info.rs  image_composition.rs  lib.rs
lib/downloader/: Cargo.toml
lib/downloader/examples/: downloader_demo.rs
lib/downloader/src/: downloader.rs  lib.rs
lib/fun-ast-nano/: .gitignore  Cargo.toml  README.md
lib/fun-ast-nano/data/: nejia.txt
lib/fun-ast-nano/examples/: transcribe.rs  transcribe_demo.rs  transcribe_segments.rs  transcribe_segments_stream.rs  transcribe_stream.rs
lib/fun-ast-nano/src/: device.rs  error.rs  lib.rs  model.rs  position_embed.rs  tokenizer.rs
lib/gpt-sovits/: .gitignore  Cargo.toml  fork.md
lib/gpt-sovits/data/: nejia.txt  xinwen.txt
lib/gpt-sovits/doc/: GPT-SoVITS_ARCHITECTURE.md
lib/gpt-sovits/examples/: sovits_demo.rs
lib/gpt-sovits/src/: error.rs  lib.rs  logits_sampler.rs  model.rs  onnx_builder.rs  sampler.rs  sovits.rs  text.rs
lib/image-effect/: .gitignore  BENCHMARK.md  Cargo.toml  README.md  REALTIME.md  benchmark.md
lib/image-effect/examples/: alter_blue_channel_demo.rs  alter_channels_demo.rs  alter_green_channel_demo.rs  alter_red_channel_demo.rs  alter_two_channel_demo.rs  box_blur_demo.rs  brightness_demo.rs  color_balance_demo.rs  color_horizontal_strips_demo.rs  color_tint_demo.rs  color_vertical_strips_demo.rs  colorize_demo.rs  contrast_demo.rs  cool_filter_demo.rs  create_test.rs  create_test_image.rs  darken_hsluv_demo.rs  darken_hsv_demo.rs  darken_lch_demo.rs  dec_brightness_demo.rs  desaturate_hsluv_demo.rs  desaturate_hsv_demo.rs  desaturate_lch_demo.rs  dither_demo.rs  duotone_demo.rs  edge_detection_demo.rs  emboss_demo.rs  frosted_glass_demo.rs  gamma_correction_demo.rs  gaussian_blur_demo.rs  gaussian_noise_demo.rs  grayscale_demo.rs  halftone_demo.rs  horizontal_strips_demo.rs  hue_rotate_demo.rs  hue_rotate_hsl_demo.rs  hue_rotate_hsluv_demo.rs  hue_rotate_hsv_demo.rs  hue_rotate_lch_demo.rs  image-effect-benchmark.rs  (+40 more)
lib/image-effect/src/: base_effect.rs  blur_effect.rs  channel_effect.rs  colour_space.rs  colour_space_effect.rs  filter.rs  filter_effect.rs  lib.rs  monochrome.rs  monochrome_effect.rs  noise.rs  noise_effect.rs  preset_filter_effect.rs  realtime.rs  special.rs  special_effect.rs  stylized.rs  stylized_effect.rs
lib/mp4-player/: Cargo.toml
lib/mp4-player/examples/: playing_demo.rs  show_metadata.rs
lib/mp4-player/src/: lib.rs  metadata.rs  player.rs  video_decoder.rs
lib/mp4m/: .gitignore  Cargo.toml
lib/mp4m/examples/: diff_channel_audio_mixing.rs  mp4_processor_demo.rs  mp4_processor_two_audios_demo.rs  one_stereo_audio_mixing.rs  two_stereo_audio_mixing.rs
lib/mp4m/src/: audio_processor.rs  lib.rs  mp4_processor.rs  sample_type.rs
lib/recorder/: Cargo.toml  cargo-check.sh  setup-env.sh
lib/recorder/examples/: audio_devices_demo.rs  audio_recording_demo.rs  cursor_tracking_basic_demo.rs  cursor_tracking_stable_fast_movement.rs  denoise_demo.rs  encode_frame_demo.rs  evaluate_fps_demo.rs  gain_db_demo.rs  input_recording_demo.rs  merge_tracks_demo.rs  push_stream_demo.rs  real_time_denoise_demo.rs  recording_10m_demo.rs  recording_1s_demo.rs  recording_5s_demo.rs  recording_demo.rs  resize_img_demo.rs  screen_mix_camera_demo.rs  share_screen_demo.rs  speaker_recording_demo.rs  speaker_recording_with_audio_demo.rs  windows_audio_system_check.rs
lib/recorder/src/: audio_level.rs  audio_recorder.rs  config.rs  cursor_tracker.rs  deniose.rs  denoise.rs  error.rs  h264_writer.rs  lib.rs  mp4_ffmpeg.rs  process_mode.rs  record_audio.rs  record_speaker.rs  recorder.rs  recorder_config.rs  recorder_error.rs  resolution.rs  speaker_recorder.rs  video_encoder.rs  worker.rs
lib/screen-capture/: Cargo.toml
lib/screen-capture-wayland-portal/: .mcp.json  Cargo.toml
lib/screen-capture-wayland-portal/examples/: backend_screenshot_demo.rs  capture_5s_demo.rs  capture_mean_time_demo.rs  capture_twice_demo.rs  cursor_tracking_demo.rs  screen_info_demo.rs  screenshot_demo.rs
lib/screen-capture-wayland-portal/src/: backend.rs  capture.rs  cursor.rs  error.rs  lib.rs  screen_info.rs
lib/screen-capture-windows/: Cargo.toml  README.md
lib/screen-capture-windows/examples/: backend_demo.rs  capture_mean_time_demo.rs  capture_stream_demo.rs  screen_info_demo.rs  screen_list_demo.rs  windows_cursor_demo.rs
lib/screen-capture-windows/src/: backend.rs  capture.rs  cursor.rs  error.rs  lib.rs  screen_info.rs
lib/screen-capture/src/: capture.rs  cursor.rs  lib.rs  screen_info.rs
lib/srtmp/: .gitignore  Cargo.toml
lib/srtmp/examples/: README.md  aac-encoding-simple.rs  ffmpeg-push-client.sh  (+5 more)
lib/tensor-utils/: Cargo.toml  LICENSE
lib/video-encoder/: Cargo.toml
lib/video-utils/: .gitignore  Cargo.toml  MP4_ENCODER.md  MP4_ENCODER_STATUS.md  MP4_MUXER_STATUS.md  MP4_SUMMARY.md  PROGRESS.md  test_issue.rs  test_results.txt  todo.md
lib/wayland-wlr-screen-capture/: Cargo.toml
lib/wrtc/: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md
wayshot-cursor/: Cargo.toml  README.md
wayshot-cursor/examples/: client.rs
wayshot-cursor/src/: main.rs
(+373 files in other folders)
