[workspace]
exclude = []
resolver = "3"
members = ["wayshot", "tr-helper", "icon-helper", "lib/*"]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"
readme = "README.md"
authors = ["Heng30 <rongheng30@gmail.com>"]
keywords = ["Rust", "GUI", "Wayland", "Linux", "wlr"]
homepage = "https://github.com/Heng30/wayshot"
repository = "https://github.com/Heng30/wayshot"
description = "It's a screen recorder for wayland with wlr protocol."

[profile.dev]
lto = false
debug = false
opt-level = 0
incremental = true

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"
codegen-units = 1
incremental = true

[workspace.dependencies]
cbc = "0.1"
tar = "0.4"
log = "0.4"
hex = "0.4"
aes = "0.8"
syn = "2.0"
sqlx = "0.8"
rand = "0.9"
clap = "4.5"
toml = "0.9"
duct = "1.0"
uuid = "1.17"
serde = "1.0"
quote = "1.0"
paste = "1.0"
bytes = "1.10"
tokio = "1.45"
regex = "1.11"
slint = "1.14"
image = "0.25"
flate2 = "1.1"
anyhow = "1.0"
chrono = "0.4"
reqwest = "0.12"
tempfile = "3.20"
stacksafe = "0.1"
getrandom = "0.3"
once_cell = "1.21"
serde_json = "1.0"
webbrowser = "1.0"
serde_with = "3.13"
env_logger = "0.11"
proc-macro2 = "1.0"
slint-build = "1.14"
wasm-bindgen = "0.2"
display-info = "0.5"
native-dialog = "0.9"
derive_setters = "0.1"
embed-resource = "3.0"
android_logger = "0.15"
android_clipboard = "0.1.0"

# maybe outdated
qrcode = "0.14"
walkdir = "2.5"
clipboard = "0.5"
derivative = "2.2"
console_log = "1.0"
crypto-hash = "0.3"
platform-dirs = "0.3"

yuv = "0.8"
mp4 = "0.14"
x264 = "0.5"
cpal = "0.16"
hound = "3.5"
which = "8.0"
ctrlc = "3.5"
rubato = "0.16"
fdk-aac = "0.8"
memmap2 = "0.9"
pipewire = "0.9"
thiserror = "2.0"
crossbeam = "0.8"
spin_sleep = "1.3"
nnnoiseless = "0.5"
derive_builder = "0.20"
wayland-client = "0.31"
fast_image_resize = "5.3"
nix = { version = "0.30", features = ["fs"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }

mp4m = { path = "lib/mp4m" }
cutil = { path = "lib/cutil" }
sqldb = { path = "lib/sqldb" }
pmacro = { path = "lib/pmacro" }
screen-capture = { path = "lib/screen-capture" }
recorder = { path = "lib/recorder", default-features = false }
screen-capture-wayland-wlr = { path = "lib/screen-capture-wayland-wlr" }
