[workspace]
exclude = []
resolver = "3"
members = ["wayshot", "wayshot-cursor", "tr-helper", "icon-helper", "lib/*"]

[workspace.package]
license = "MIT"
edition = "2024"
version = "0.1.0"
readme = "README.md"
authors = ["Heng30 <rongheng30@gmail.com>"]
keywords = ["Rust", "GUI", "Wayland", "Linux", "wlr"]
homepage = "https://github.com/Heng30/wayshot"
repository = "https://github.com/Heng30/wayshot"
description = "It's a screen recorder."

[profile.dev]
lto = false
debug = false
opt-level = 0
incremental = true

# https://github.com/johnthagen/min-sized-rust
[profile.release]
lto = true
strip = true
debug = false
panic = "abort"
opt-level = "s"
codegen-units = 1
incremental = true

[workspace.dependencies]
cbc = "0.1"
tar = "0.4"
log = "0.4"
hex = "0.4"
aes = "0.8"
syn = "2.0"
sqlx = "0.8"
rand = "0.9"
clap = "4.5"
toml = "0.9"
duct = "1.1"
uuid = "1.19"
serde = "1.0"
quote = "1.0"
paste = "1.0"
bytes = "1.11"
tokio = "1.49"
regex = "1.12"
rayon = "1.11"
slint = "1.14"
flate2 = "1.1"
anyhow = "1.0"
chrono = "0.4"
reqwest = "0.13"
tempfile = "3.24"
stacksafe = "1.0"
getrandom = "0.3"
once_cell = "1.21"
serde_json = "1.0"
webbrowser = "1.0"
serde_with = "3.16"
env_logger = "0.11"
proc-macro2 = "1.0"
slint-build = "1.14"
wasm-bindgen = "0.2"
display-info = "0.5"
native-dialog = "0.9"
derive_setters = "0.1"
embed-resource = "3.0"
android_logger = "0.15"
android_clipboard = "0.1"

# maybe outdated
qrcode = "0.14"
walkdir = "2.5"
clipboard = "0.5"
derivative = "2.2"
console_log = "1.0"
crypto-hash = "0.3"
platform-dirs = "0.3"

wio = "0.2"
yuv = "0.8"
mp4 = "0.14"
nix = "0.30"
opus = "0.3"
pest = "2.8"
x264 = "0.5"
http = "1.4"
rdev = "0.5"
open = "5.3"
cpal = "0.17"
hound = "3.5"
which = "8.0"
ctrlc = "3.5"
ashpd = "0.12"
strum = "0.27"
winapi = "0.3"
fast2s = "0.3"
webrtc = "0.14"
nokhwa = "0.10"
cfg-if = "1.0"
fdk-aac = "0.8"
futures = "0.3"
memmap2 = "0.9"
arpabet = "2.0"
realfft = "3.5"
ndarray = "0.17"
windows = "0.62"
jieba-rs = "0.8"
pipewire = "0.9"
num_enum = "0.7"
openh264 = "0.9"
rml_rtmp = "0.8"
indexmap = "2.13"
symphonia = "0.5"
thiserror = "2.0"
crossbeam = "0.8"
byteorder = "1.5"
photon-rs = "0.3"
candle-nn = "0.9"
imageproc = "0.26"
tokio-util = "0.7"
spin_sleep = "1.3"
stunclient = "0.4"
serde_yaml = "0.9"
tokenizers = "0.22"
nnnoiseless = "0.5"
candle-core = "0.9"
ffmpeg-next = "8.0"
async-trait = "0.1"
pest_derive = "2.8"
async-stream = "0.3"
tokio-stream = "0.1"
async-openai = "0.32"
strum_macros = "0.27"
rustls-pemfile = "2.2"
derive_builder = "0.20"
wayland-client = "0.31"
rustls-pki-types = "1.13"
fast_image_resize = "6.0"
wayland-protocols = "0.32"
candle-transformers = "0.9"
unicode-segmentation = "1.12"
wayland-protocols-wlr = "0.3"
rodio = { version = "0.21", default-features = false }
rustls = { version = "0.23", default-features = false }
ort = { version = "2.0.0-rc.11", default-features = false }
tokio-rustls = { version = "0.26", default-features = false }
chinese-number = { version = "0.7", default-features = false }
image = { version = "0.25", default-features = false, features = ["png"] }

bot = { path = "lib/bot" }
mp4m = { path = "lib/mp4m" }
wrtc = { path = "lib/wrtc" }
srtmp = { path = "lib/srtmp" }
cutil = { path = "lib/cutil" }
sqldb = { path = "lib/sqldb" }
pmacro = { path = "lib/pmacro" }
camera = { path = "lib/camera" }
bytesio = { path = "lib/bytesio" }
recorder = { path = "lib/recorder" }
gpt-sovits = { path = "lib/gpt-sovits" }
downloader = { path = "lib/downloader" }
mp4-player = { path = "lib/mp4-player" }
audio-utils = { path = "lib/audio-utils" }
video-utils = { path = "lib/video-utils" }
tensor-utils = { path = "lib/tensor-utils" }
fun-ast-nano = { path = "lib/fun-ast-nano" }
image-effect = { path = "lib/image-effect" }
video-encoder = { path = "lib/video-encoder" }
screen-capture = { path = "lib/screen-capture" }
background-remover = { path = "lib/background-remover" }
screen-capture-windows = { path = "lib/screen-capture-windows" }
screen-capture-wayland-wlr = { path = "lib/screen-capture-wayland-wlr" }
screen-capture-wayland-portal = { path = "lib/screen-capture-wayland-portal" }
