[package]
name = "wayshot-cursor"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
ctrlc.workspace = true
anyhow.workspace = true
env_logger.workspace = true
rdev = { workspace = true, features = ["unstable_grab"] }
