[package]
name = "audio-utils"
license = "Apache-2.0"
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
derivative.workspace = true
derive_setters.workspace = true
rayon = { workspace = true, optional = true }
realfft = { workspace = true, optional = true }
candle-core = { workspace = true, optional = true }
tensor-utils = { workspace = true, optional = true }
symphonia = { workspace = true, features = [
  "mp3",
  "aac",
  "alac",
  "flac",
  "ogg",
  "pcm",
  "wav",
  "mkv",
  "isomp4",
] }

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true

[features]
default = []
extraction = ["dep:candle-core", "dep:rayon", "dep:realfft", "dep:tensor-utils"]
