[package]
name = "background-remover"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
image.workspace = true
ndarray.workspace = true
thiserror.workspace = true
derivative.workspace = true
derive_setters.workspace = true
fast_image_resize.workspace = true
ort = { workspace = true, features = [
  "std",
  "cuda",
  "tls-rustls",
  "download-binaries",
] }

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
