[package]
name = "bot"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
thiserror.workspace = true
serde_json.workspace = true
tokio-stream.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["serde_derive"] }
reqwest = { workspace = true, features = ["json", "stream"] }

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
