[package]
name = "downloader"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
thiserror.workspace = true
futures.workspace = true
reqwest = { workspace = true, features = ["stream"] }

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
