[package]
name = "mp4-player"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
mp4.workspace = true
image.workspace = true
bytes.workspace = true
fdk-aac.workspace = true
openh264.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
spin_sleep.workspace = true
derive_setters.workspace = true
yuv = { workspace = true, features = ["rayon"] }
rodio = { workspace = true, features = ["playback"] }

[dev-dependencies]
env_logger.workspace = true
tokio = { workspace = true, features = ["full"] }
