[package]
name = "mp4m"
readme.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true


[dependencies]
log.workspace = true
hound.workspace = true
rubato.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
derive_builder.workspace = true

[dev-dependencies]
rand.workspace = true
env_logger.workspace = true
