[package]
name = "mp4m"
readme.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
mp4.workspace = true
hound.workspace = true
fdk-aac.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
audio-utils.workspace = true
derive_builder.workspace = true
video-encoder.workspace = true

[dev-dependencies]
rand.workspace = true
image.workspace = true
env_logger.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
video-encoder = { workspace = true, features = ["x264"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
video-encoder = { workspace = true, features = ["ffmpeg"] }
