[package]
name = "recorder"
readme.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
cpal.workspace = true
mp4m.workspace = true
hound.workspace = true
image.workspace = true
chrono.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
once_cell.workspace = true
spin_sleep.workspace = true
nnnoiseless.workspace = true
derive_setters.workspace = true
screen-capture.workspace = true
openh264 = { workspace = true, optional = true }
yuv = { workspace = true, features = ["rayon"] }
ffmpeg-next = { workspace = true, optional = true }
fast_image_resize = { workspace = true, features = ["rayon"] }

[target.'cfg(target_os = "linux")'.dependencies]
x264 = { workspace = true, optional = true }
pipewire.workspace = true
screen-capture-wayland-wlr = { workspace = true, optional = true }
screen-capture-wayland-portal = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
screen-capture-windows.workspace = true
windows = { workspace = true, features = [
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_Audio_Apo",
  "Win32_Media_KernelStreaming",
  "Win32_System_Com",
  "Win32_System_Ole",
] }

[dev-dependencies]
ctrlc.workspace = true
env_logger.workspace = true

[features]
default = ["wayland-wlr"]
windows = ["ffmpeg-video-encoder"]
wayland-wlr = ["dep:screen-capture-wayland-wlr", "x264-video-encoder"]
wayland-portal = ["dep:screen-capture-wayland-portal", "x264-video-encoder"]

# For Debug on Linux
# wayland-wlr = ["dep:screen-capture-wayland-wlr", "ffmpeg-video-encoder"]
# wayland-wlr = ["dep:screen-capture-wayland-wlr", "openh264-video-encoder"]

x264-video-encoder = ["dep:x264"]
openh264-video-encoder = ["dep:openh264"]
ffmpeg-video-encoder = ["dep:ffmpeg-next"]
