[package]
name = "recorder"
readme.workspace = true
license.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
cpal.workspace = true
mp4m.workspace = true
wrtc.workspace = true
srtmp.workspace = true
hound.workspace = true
image.workspace = true
camera.workspace = true
chrono.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
once_cell.workspace = true
spin_sleep.workspace = true
nnnoiseless.workspace = true
image-effect.workspace = true
video-encoder.workspace = true
derive_setters.workspace = true
screen-capture.workspace = true
tokio = { workspace = true, features = ["full"] }
fast_image_resize = { workspace = true, features = ["rayon"] }

[target.'cfg(target_os = "linux")'.dependencies]
pipewire.workspace = true
screen-capture-wayland-wlr = { workspace = true, optional = true }
screen-capture-wayland-portal = { workspace = true, optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
screen-capture-windows.workspace = true
winapi = { workspace = true, features = [
  "audioclient",
  "mmdeviceapi",
  "avrt",
  "combaseapi",
  "objbase",
  "propidl",
  "functiondiscoverykeys_devpkey",
  "winuser",
  "synchapi",
  "winnt",
] }
windows = { workspace = true, features = [
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_Media_Audio_Apo",
  "Win32_Media_KernelStreaming",
  "Win32_System_Com",
  "Win32_System_Ole",
] }

[dev-dependencies]
ctrlc.workspace = true
env_logger.workspace = true
rustls = { workspace = true, features = ["ring"] }

[features]
default = []
windows = ["video-encoder/ffmpeg"]
wayland-wlr = ["dep:screen-capture-wayland-wlr", "video-encoder/x264"]
wayland-portal = ["dep:screen-capture-wayland-portal", "video-encoder/x264"]

# For debug on Linux
# wayland-wlr = ["dep:screen-capture-wayland-wlr", "video-encoder/ffmpeg"]
# wayland-wlr = ["dep:screen-capture-wayland-wlr", "video-encoder/openh264"]
