[package]
name = "screen-capture-wayland-portal"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
which.workspace = true
image.workspace = true
ashpd.workspace = true
pipewire.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
serde_json.workspace = true
spin_sleep.workspace = true
display-info.workspace = true
screen-capture.workspace = true
derive_setters.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
rdev = { workspace = true, features = ["unstable_grab"] }

once_cell.workspace = true

[dev-dependencies]
ctrlc.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = ["full"] }
