[package]
name = "screen-capture-windows"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
wio.workspace = true
image.workspace = true
once_cell.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
spin_sleep.workspace = true
display-info.workspace = true
screen-capture.workspace = true
derive_setters.workspace = true
winapi = { workspace = true, features = [
  "d3d11",
  "d3dcommon",
  "dxgi",
  "dxgi1_2",
  "dxgitype",
  "ntdef",
  "unknwnbase",
  "windef",
  "winerror",
  "winuser",
] }

[dev-dependencies]
ctrlc.workspace = true
env_logger.workspace = true
