[package]
name = "tensor-utils"
license = "Apache-2.0"
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
thiserror.workspace = true
candle-core.workspace = true
