[package]
name = "video-utils"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
log.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
derivative.workspace = true
derive_setters.workspace = true
unicode-segmentation.workspace = true
image = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
ffmpeg-next = { workspace = true, optional = true }
chinese-number = { workspace = true, features = ["chinese-to-number"] }
video-encoder = { path = "../video-encoder", optional = true }

[features]
default = []
# default = ["ffmpeg"]
ffmpeg = ["ffmpeg-next", "image", "video-encoder/ffmpeg"]

[dev-dependencies]
anyhow.workspace = true
env_logger.workspace = true
