[package]
name = "wrtc"
edition = "2024"
license = "MIT"
version = "0.1.0"
description = "A whip/whep library."

[dependencies]
log.workspace = true
rand.workspace = true
http.workspace = true
bytes.workspace = true
rubato.workspace = true
anyhow.workspace = true
webrtc.workspace = true
bytesio.workspace = true
indexmap.workspace = true
audiopus.workspace = true
openh264.workspace = true
byteorder.workspace = true
thiserror.workspace = true
serde_json.workspace = true
mp4-player.workspace = true
derive_setters.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }

[dev-dependencies]
image.workspace = true
hound.workspace = true
once_cell.workspace = true
stunclient.workspace = true
env_logger.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dev-dependencies]
video-encoder = { workspace = true, features = ["x264"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
video-encoder = { workspace = true, features = ["ffmpeg"] }
