[package]
name = "wrtc"
license.workspace = true
edition.workspace = true
version.workspace = true
readme.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
description = "A whep library"

[dependencies]
log.workspace = true
rand.workspace = true
http.workspace = true
mp4m.workspace = true
bytes.workspace = true
webrtc.workspace = true
bytesio.workspace = true
indexmap.workspace = true
audiopus.workspace = true
openh264.workspace = true
byteorder.workspace = true
thiserror.workspace = true
derivative.workspace = true
serde_json.workspace = true
mp4-player.workspace = true
video-encoder.workspace = true
derive_setters.workspace = true
rustls-pemfile.workspace = true
rustls-pki-types.workspace = true
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["json"] }
tokio-rustls = { workspace = true, features = ["tls12"] }

[dev-dependencies]
image.workspace = true
hound.workspace = true
anyhow.workspace = true
once_cell.workspace = true
stunclient.workspace = true
env_logger.workspace = true
serde_json.workspace = true
rustls = { workspace = true, features = ["ring"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
video-encoder = { workspace = true, features = ["x264"] }

[target.'cfg(target_os = "windows")'.dev-dependencies]
video-encoder = { workspace = true, features = ["ffmpeg"] }
