[package]
name = "bytesio"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "a network io library using tokio."

[dependencies]
log = "0.4"
rand = "0.9"
bytes = "1.0"
futures = "0.3"
thiserror = "2.0"
byteorder = "1.4"
async-trait = "0.1"
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7", features = ["codec"] }
tokio = { version = "1.48", default-features = false, features = ["full"] }
