[package]
name = "commonlib"
version = "0.1.1"
edition = "2018"
license = "MIT"

[dependencies]
log = "0.4"
md5 = "0.8"
anyhow = "1.0"
chrono = "0.4"
failure = "0.1"
indexmap = "2.12"
env_logger = "0.11"
serde_derive = "1.0"
job_scheduler_ng = "2.4"
serde = { version = "1.0", features = ["derive", "rc"] }
