[package]
name = "commonlib"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
log = "0.4"
md5 = "0.8"
rand = "0.9"
anyhow = "1.0"
chrono = "0.4"
thiserror = "2.0"
indexmap = "2.12"
env_logger = "0.11"
serde_derive = "1.0"
job_scheduler_ng = "2.4"
serde = { version = "1.0", features = ["derive", "rc"] }

[dev-dependencies]
serde_json = "1.0"
