[package]
name = "xflv"
description = "flv library."
version = "0.3.0"
license = "MIT"
readme = "README.md"
categories = ["flv"]
keywords = ["flv", "video", "streaming"]
edition = "2018"

[dependencies]
log = "0.4"
bytes = "1.0"
failure = "0.1"
indexmap = "2.12"
byteorder = "1.4"
serde = { version = "1.0", features = ["derive", "rc"] }

h264-decoder = { path = "../h264" }
bytesio = { path = "../bytesio" }
